--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,7 +19,7 @@ source:
 
 build:
     number: 1
-    script: python -m pip install --no-deps --ignore-installed .
+    script: python -m pip install --no-deps --ignore-installed -vvv .
 
 requirements:
   host:
