--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,16 +18,14 @@ source:
   sha256: {{ sha256 }}
 
 build:
+    noarch: python
     number: 1
-    script: python -m pip install --no-deps --ignore-installed -vvv .
+    script: "{{ PYTHON }} -m pip install . -vv"
 
 requirements:
   host:
     - pip
     - python
-    - numpy
-    - h5py
-    - pydicom
   run:
     - python
     - numpy
@@ -35,7 +33,7 @@ requirements:
     - h5py
     - pydicom
     - six
-    - bz2file  # [py27]
+    - bz2file
 
 test:
   imports:
