--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,6 +21,14 @@ build:
     noarch: python
     number: 0
     script: "{{ PYTHON }} -m pip install . -vv"
+    entry_points:
+      - parrec2nii   = nibabel.cmdline.parrec2nii:main
+      - nib-ls       = nibabel.cmdline.ls:main
+      - nib-dicomfs  = nibabel.cmdline.dicomfs:main
+      - nib-nifti-dx = nibabel.cmdline.nifti_dx:main
+      - nib-tck2trk  = nibabel.cmdline.tck2trk:main
+      - nib-trk2tck  = nibabel.cmdline.trk2tck:main
+      - nib-diff     = nibabel.cmdline.diff:main
 
 requirements:
   host:
@@ -38,6 +46,15 @@ requirements:
 test:
   imports:
     - nibabel
+  commands:
+    - command -v parrec2nii
+    - command -v nib-ls
+    - command -v nib-dicomfs
+    - command -v nib-nifti-dx
+    - command -v nib-tck2trk
+    - command -v nib-trk2tck
+    - command -v nib-diff
+
 
 about:
   home: https://nipy.org/nibabel
