--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,15 +35,16 @@ build:
 
 requirements:
   host:
-    - python >=3.6
+    - python >=3.8
     - pip
+    - hatchling
+    - hatch-vcs
+    - setuptools_scm
   run:
-    - python >=3.6
-    - packaging >=14.3
-    - numpy >=1.14
-    - scipy
-    - h5py
-    - pydicom >=1.0.0
+    - python >=3.8
+    - packaging >=17
+    - numpy >=1.19
+    - setuptools
 
 test:
   imports:
