--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,48 +18,49 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  noarch: python
   number: 0
   script: {{ PYTHON }} -m pip install . -vv
   entry_points:
-    - parrec2nii   = nibabel.cmdline.parrec2nii:main
-    - nib-ls       = nibabel.cmdline.ls:main
-    - nib-dicomfs  = nibabel.cmdline.dicomfs:main
-    - nib-nifti-dx = nibabel.cmdline.nifti_dx:main
-    - nib-tck2trk  = nibabel.cmdline.tck2trk:main
-    - nib-trk2tck  = nibabel.cmdline.trk2tck:main
-    - nib-diff     = nibabel.cmdline.diff:main
     - nib-conform  = nibabel.cmdline.conform:main
+    - nib-convert  = nibabel.cmdline.convert:main
+    - nib-dicomfs  = nibabel.cmdline.dicomfs:main
+    - nib-diff     = nibabel.cmdline.diff:main
+    - nib-ls       = nibabel.cmdline.ls:main
+    - nib-nifti-dx = nibabel.cmdline.nifti_dx:main
     - nib-roi      = nibabel.cmdline.roi:main
     - nib-stats    = nibabel.cmdline.stats:main
+    - nib-tck2trk  = nibabel.cmdline.tck2trk:main
+    - nib-trk2tck  = nibabel.cmdline.trk2tck:main
+    - parrec2nii   = nibabel.cmdline.parrec2nii:main
 
 requirements:
   host:
-    - python >=3.8
+    - python
     - pip
     - hatchling
     - hatch-vcs
     - setuptools_scm
   run:
-    - python >=3.8
+    - python
     - packaging >=17
     - numpy >=1.19
-    - setuptools
+    - importlib_resources  # [py<39]
 
 test:
   imports:
     - nibabel
   commands:
-    - parrec2nii --help
-    - nib-ls --help
-    - nib-dicomfs --help
-    - nib-nifti-dx --help
-    - nib-tck2trk --help
-    - nib-trk2tck --help
-    - nib-diff --help
     - nib-conform --help
+    - nib-convert --help
+    - nib-dicomfs --help
+    - nib-diff --help
+    - nib-ls --help
+    - nib-nifti-dx --help
     - nib-roi --help
     - nib-stats --help
+    - nib-tck2trk --help
+    - nib-trk2tck --help
+    - parrec2nii --help
 
 
 about:
