--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,6 +19,7 @@ source:
 
 build:
   number: 0
+  noarch: python
   script: {{ PYTHON }} -m pip install . -vv
   entry_points:
     - nib-conform  = nibabel.cmdline.conform:main
@@ -46,7 +47,7 @@ requirements:
   run:
     - python
     - packaging >=17
-    - numpy >=1.19
+    - numpy >=1.20
     - importlib_resources  # [py<39]
 
 test:
