--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -39,16 +39,16 @@ requirements:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
   host:
-    - python
+    - python >=3.8
     - pip
     - hatchling
     - hatch-vcs
     - setuptools_scm
   run:
-    - python
+    - python >=3.8
     - packaging >=17
     - numpy >=1.20
-    - importlib_resources  # [py<39]
+    - importlib_resources >=1.3
 
 test:
   imports:
