--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,7 +18,7 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 0
+  number: 1
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
   entry_points:
@@ -51,6 +51,11 @@ requirements:
     - importlib_resources >=1.3
 
 test:
+  requires:
+    - pytest
+    - pytest-doctestplus
+    - pytest-httpserver
+    - pytest-xdist
   imports:
     - nibabel
   commands:
@@ -65,6 +70,7 @@ test:
     - nib-tck2trk --help
     - nib-trk2tck --help
     - parrec2nii --help
+    - pytest --doctest-modules --doctest-plus --pyargs nibabel -n auto
 
 
 about:
