--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -39,16 +39,17 @@ requirements:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
   host:
-    - python >=3.8
+    - python >=3.9
     - pip
     - hatchling
     - hatch-vcs
     - setuptools_scm
   run:
-    - python >=3.8
-    - packaging >=17
-    - numpy >=1.20
-    - importlib_resources >=1.3
+    - python >=3.9
+    - packaging >=20
+    - numpy >=1.22
+    - importlib_resources >=5.12
+    - typing_extensions >=4.6
 
 test:
   imports:
