--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -52,6 +52,18 @@ requirements:
     - typing_extensions >=4.6
 
 test:
+  requires:
+    - pytest
+    - pytest-doctestplus
+    - pytest-httpserver
+    - pytest-xdist
+    - scipy
+    - pillow
+    - h5py
+    - indexed_gzip
+    - matplotlib
+    - pydicom
+    - pyzstd
   imports:
     - nibabel
   commands:
@@ -66,6 +78,7 @@ test:
     - nib-tck2trk --help
     - nib-trk2tck --help
     - parrec2nii --help
+    - pytest --doctest-modules --doctest-plus --pyargs nibabel -n auto
 
 
 about:
